payas-parser/src/builder/snapshots/payas_parser__builder__resolved_builder__tests__with_access_default_values.snap
---
source: payas-parser/src/builder/resolved_builder.rs
expression: resolved

---
types:
  values:
    - - ~
      - Primitive: Boolean
    - - ~
      - Primitive: Int
    - - ~
      - Primitive: Float
    - - ~
      - Primitive: Decimal
    - - ~
      - Primitive: String
    - - ~
      - Primitive: LocalTime
    - - ~
      - Primitive: LocalDateTime
    - - ~
      - Primitive: LocalDate
    - - ~
      - Primitive: Instant
    - - ~
      - Primitive: Json
    - - ~
      - Primitive: Blob
    - - ~
      - Primitive: ClaytipInjected
    - - ~
      - Primitive:
          Interception: Operation
    - - ~
      - Composite:
          name: Concert
          plural_name: Concerts
          fields:
            - name: id
              typ:
                Plain: Int
              kind:
                Persistent:
                  column_name: id
                  self_column: true
                  is_pk: true
                  is_autoincrement: true
                  type_hint: ~
            - name: title
              typ:
                Plain: String
              kind:
                Persistent:
                  column_name: title
                  self_column: true
                  is_pk: false
                  is_autoincrement: false
                  type_hint: ~
            - name: public
              typ:
                Plain: Boolean
              kind:
                Persistent:
                  column_name: public
                  self_column: true
                  is_pk: false
                  is_autoincrement: false
                  type_hint: ~
          kind:
            Persistent:
              table_name: concerts
          access:
            creation:
              LogicalOp:
                Or:
                  - RelationalOp:
                      Eq:
                        - FieldSelection:
                            Select:
                              - Single:
                                  - - AuthContext
                                  - Reference:
                                      index: 13
                                      generation: ~
                              - - role
                              - Reference:
                                  index: 4
                                  generation: ~
                        - StringLiteral:
                            - ROLE_ADMIN
                        - Primitive: Boolean
                  - FieldSelection:
                      Select:
                        - Single:
                            - - self
                            - Reference:
                                index: 14
                                generation: ~
                        - - public
                        - Reference:
                            index: 0
                            generation: ~
                  - Primitive: Boolean
            read:
              LogicalOp:
                Or:
                  - RelationalOp:
                      Eq:
                        - FieldSelection:
                            Select:
                              - Single:
                                  - - AuthContext
                                  - Reference:
                                      index: 13
                                      generation: ~
                              - - role
                              - Reference:
                                  index: 4
                                  generation: ~
                        - StringLiteral:
                            - ROLE_ADMIN
                        - Primitive: Boolean
                  - FieldSelection:
                      Select:
                        - Single:
                            - - self
                            - Reference:
                                index: 14
                                generation: ~
                        - - public
                        - Reference:
                            index: 0
                            generation: ~
                  - Primitive: Boolean
            update:
              LogicalOp:
                Or:
                  - RelationalOp:
                      Eq:
                        - FieldSelection:
                            Select:
                              - Single:
                                  - - AuthContext
                                  - Reference:
                                      index: 13
                                      generation: ~
                              - - role
                              - Reference:
                                  index: 4
                                  generation: ~
                        - StringLiteral:
                            - ROLE_ADMIN
                        - Primitive: Boolean
                  - FieldSelection:
                      Select:
                        - Single:
                            - - self
                            - Reference:
                                index: 14
                                generation: ~
                        - - public
                        - Reference:
                            index: 0
                            generation: ~
                  - Primitive: Boolean
            delete:
              LogicalOp:
                Or:
                  - RelationalOp:
                      Eq:
                        - FieldSelection:
                            Select:
                              - Single:
                                  - - AuthContext
                                  - Reference:
                                      index: 13
                                      generation: ~
                              - - role
                              - Reference:
                                  index: 4
                                  generation: ~
                        - StringLiteral:
                            - ROLE_ADMIN
                        - Primitive: Boolean
                  - FieldSelection:
                      Select:
                        - Single:
                            - - self
                            - Reference:
                                index: 14
                                generation: ~
                        - - public
                        - Reference:
                            index: 0
                            generation: ~
                  - Primitive: Boolean
    - ~
    - ~
  map:
    Blob:
      index: 10
      generation: ~
    Boolean:
      index: 0
      generation: ~
    ClaytipInjected:
      index: 11
      generation: ~
    Concert:
      index: 13
      generation: ~
    Decimal:
      index: 3
      generation: ~
    Float:
      index: 2
      generation: ~
    Instant:
      index: 8
      generation: ~
    Int:
      index: 1
      generation: ~
    Json:
      index: 9
      generation: ~
    LocalDate:
      index: 7
      generation: ~
    LocalDateTime:
      index: 6
      generation: ~
    LocalTime:
      index: 5
      generation: ~
    Operation:
      index: 12
      generation: ~
    String:
      index: 4
      generation: ~
contexts:
  values:
    - - ~
      - name: AuthContext
        fields:
          - name: role
            typ:
              Plain: String
            source:
              Jwt:
                claim: role
    - ~
    - ~
    - ~
  map:
    AuthContext:
      index: 0
      generation: ~
services:
  values:
    - ~
    - ~
    - ~
    - ~
  map: {}

