payas-parser/src/builder/snapshots/payas_parser__builder__resolved_builder__tests__with_annotations.snap
---
source: payas-parser/src/builder/resolved_builder.rs
expression: resolved

---
types:
  values:
    - - ~
      - Primitive: Boolean
    - - ~
      - Primitive: Int
    - - ~
      - Primitive: Float
    - - ~
      - Primitive: Decimal
    - - ~
      - Primitive: String
    - - ~
      - Primitive: LocalTime
    - - ~
      - Primitive: LocalDateTime
    - - ~
      - Primitive: LocalDate
    - - ~
      - Primitive: Instant
    - - ~
      - Primitive: Json
    - - ~
      - Primitive: Blob
    - - ~
      - Primitive: ClaytipInjected
    - - ~
      - Primitive:
          Interception: Operation
    - - ~
      - Composite:
          name: Concert
          plural_name: Concerts
          fields:
            - name: id
              typ:
                Plain: Int
              kind:
                Persistent:
                  column_name: custom_id
                  self_column: true
                  is_pk: true
                  type_hint:
                    Explicit:
                      dbtype: BIGINT
                  unique: false
              default_value: Autoincrement
            - name: title
              typ:
                Plain: String
              kind:
                Persistent:
                  column_name: custom_title
                  self_column: true
                  is_pk: false
                  type_hint:
                    String:
                      length: 12
                  unique: false
              default_value: ~
            - name: venue
              typ:
                Plain: Venue
              kind:
                Persistent:
                  column_name: custom_venue_id
                  self_column: true
                  is_pk: false
                  type_hint: ~
                  unique: false
              default_value: ~
            - name: reserved
              typ:
                Plain: Int
              kind:
                Persistent:
                  column_name: reserved
                  self_column: true
                  is_pk: false
                  type_hint:
                    Int:
                      bits: ~
                      range:
                        - 0
                        - 300
                  unique: false
              default_value: ~
            - name: time
              typ:
                Plain: Instant
              kind:
                Persistent:
                  column_name: time
                  self_column: true
                  is_pk: false
                  type_hint:
                    DateTime:
                      precision: 4
                  unique: false
              default_value: ~
            - name: price
              typ:
                Plain: Decimal
              kind:
                Persistent:
                  column_name: price
                  self_column: true
                  is_pk: false
                  type_hint:
                    Decimal:
                      precision: 10
                      scale: 2
                  unique: false
              default_value: ~
          kind:
            Persistent:
              table_name: custom_concerts
          access:
            creation:
              BooleanLiteral:
                - true
            read:
              BooleanLiteral:
                - true
            update:
              BooleanLiteral:
                - true
            delete:
              BooleanLiteral:
                - true
    - - ~
      - Composite:
          name: Venue
          plural_name: Venuess
          fields:
            - name: id
              typ:
                Plain: Int
              kind:
                Persistent:
                  column_name: custom_id
                  self_column: true
                  is_pk: true
                  type_hint: ~
                  unique: false
              default_value: Autoincrement
            - name: name
              typ:
                Plain: String
              kind:
                Persistent:
                  column_name: custom_name
                  self_column: true
                  is_pk: false
                  type_hint: ~
                  unique: false
              default_value: ~
            - name: concerts
              typ:
                List:
                  Plain: Concert
              kind:
                Persistent:
                  column_name: custom_venue_id
                  self_column: false
                  is_pk: false
                  type_hint: ~
                  unique: false
              default_value: ~
            - name: capacity
              typ:
                Plain: Int
              kind:
                Persistent:
                  column_name: capacity
                  self_column: true
                  is_pk: false
                  type_hint:
                    Int:
                      bits: 16
                      range: ~
                  unique: false
              default_value: ~
            - name: latitude
              typ:
                Plain: Float
              kind:
                Persistent:
                  column_name: latitude
                  self_column: true
                  is_pk: false
                  type_hint:
                    Float:
                      bits: 24
                  unique: false
              default_value: ~
          kind:
            Persistent:
              table_name: venues
          access:
            creation:
              BooleanLiteral:
                - true
            read:
              BooleanLiteral:
                - true
            update:
              BooleanLiteral:
                - true
            delete:
              BooleanLiteral:
                - true
    - ~
  map:
    Blob:
      index: 10
      generation: ~
    Boolean:
      index: 0
      generation: ~
    ClaytipInjected:
      index: 11
      generation: ~
    Concert:
      index: 13
      generation: ~
    Decimal:
      index: 3
      generation: ~
    Float:
      index: 2
      generation: ~
    Instant:
      index: 8
      generation: ~
    Int:
      index: 1
      generation: ~
    Json:
      index: 9
      generation: ~
    LocalDate:
      index: 7
      generation: ~
    LocalDateTime:
      index: 6
      generation: ~
    LocalTime:
      index: 5
      generation: ~
    Operation:
      index: 12
      generation: ~
    String:
      index: 4
      generation: ~
    Venue:
      index: 14
      generation: ~
contexts:
  values:
    - ~
    - ~
    - ~
    - ~
  map: {}
services:
  values:
    - - ~
      - name: Foo
        script: "\n"
        script_path: bar.js
        methods:
          - name: qux
            operation_kind: Query
            is_exported: true
            access:
              creation:
                BooleanLiteral:
                  - true
              read:
                BooleanLiteral:
                  - true
              update:
                BooleanLiteral:
                  - true
              delete:
                BooleanLiteral:
                  - true
            arguments:
              - name: claytip
                typ:
                  Plain: ClaytipInjected
                is_injected: true
              - name: x
                typ:
                  Plain: Int
                is_injected: false
              - name: y
                typ:
                  Plain: String
                is_injected: false
            return_type:
              Plain: Int
          - name: quuz
            operation_kind: Mutation
            is_exported: false
            access:
              creation:
                BooleanLiteral:
                  - true
              read:
                BooleanLiteral:
                  - true
              update:
                BooleanLiteral:
                  - true
              delete:
                BooleanLiteral:
                  - true
            arguments: []
            return_type:
              Plain: String
        interceptors: []
    - ~
    - ~
    - ~
  map:
    Foo:
      index: 0
      generation: ~

